Implement group endpoints
